@@ -1,6 +1,11 @@
 2015-11-24  Natalia Portillo  <claunia@claunia.com>
 
 	* Commands/MediaInfo.cs:
+	  Added decoding and prettifying READ DISC INFORMATION.
+
+2015-11-24  Natalia Portillo  <claunia@claunia.com>
+
+	* Commands/MediaInfo.cs:
 	  Check current profile and prettify TOC, PMA, ATIP, Session
 	  and CD-TEXT.
 
