@@ -1,5 +1,10 @@
 2015-11-24  Natalia Portillo  <claunia@claunia.com>
 
+	* SCSI/MMC/DiscInformation.cs:
+	  Added decoding and prettifying READ DISC INFORMATION.
+
+2015-11-24  Natalia Portillo  <claunia@claunia.com>
+
 	* CD/ATIP.cs:
 	  ATIP not always contain S4.
 	Corrected typo.
